--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11866,22 +11866,55 @@ textarea.form-control-lg {
 
 .menu {
   margin: 0 auto;
-  padding: 0 0.938rem;
-  height: 5rem;
+  padding: 20px 0.938rem;
 }
 .menu li {
   padding: 0 0.75rem;
+}
+.menu li :hover {
+  transition: all 500ms ease;
+  color: #1db954;
 }
 .menu li a {
   color: #ffffff;
   font-weight: 600;
 }
-.menu li a:hover {
-  transition: all 500ms ease;
-  color: #1db954;
-}
 .menu li:nth-child(3) {
   border-right: 1px solid white;
+}
+
+.bg-mainsection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 130vh;
+  background: linear-gradient(to right, rgba(30, 215, 96, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/img/headphones-african-american-woman.jpg") center center/cover;
+}
+@media (max-width: 575.98px) {
+  .bg-mainsection {
+    height: 80vh;
+  }
+}
+.bg-mainsection h1 {
+  font-size: 7.5vw;
+  color: #ffffff;
+}
+.bg-mainsection p {
+  font-size: 1rem;
+  color: #ffffff;
+}
+.bg-mainsection button {
+  background-color: #1db954;
+  color: #ffffff;
+  font-weight: 600;
+  border: none;
+  padding: 0.5rem 2.5rem;
+}
+.bg-mainsection button:hover {
+  background: linear-gradient(to right, rgba(29, 185, 84, 0.7), black);
+  transition: all 500ms ease;
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=styles.css.map */
